# ArenstorfEmbeddedMethodTesting

./: CMakeLists.txt  main.cpp  output.csv  output1.csv  output2.csv  output3.csv  output4.csv  plotter.m
src/: DOPRI54Solver.h  EmbeddedRungeKutta.h  RK45Solver.h  RK54Solver.h  RKLogger.h  RKUtils.h  SRK64Solver.h  main.cpp
